2025-01-26T00:36:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12969806243 # 546
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-26
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 723 1194 / 725 1196
* notice: next accum: outdated-unq outdated-all / unq all: 724 1195 / 725 1196
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-11] / []

2025-01-23T00:35:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12919759969 # 543
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-23
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 722 1193 / 725 1196
* notice: next accum: outdated-unq outdated-all / unq all: 723 1194 / 725 1196
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-08] / []

2025-01-21T00:35:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12877835442 # 541
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-21
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 721 1192 / 725 1196
* notice: next accum: outdated-unq outdated-all / unq all: 722 1193 / 725 1196
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-06] / []

2025-01-20T00:36:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12858677794 # 540